# seabreeze

./: .gitignore  404.html  CITATION.cff  LICENSE  README.md  Snakefile  contributing.md  data.csv  environment.yml  index.html  paper.md  pyproject.toml  pytest.ini  pytest_env.yml
.github/workflows/: ci.yaml
JOSS/: paper.bib  paper.md
documentation/: mkdocs.yml
documentation/docs/: index.md  installation.md  output.md  tutorial.md  usage.md  workflows.md
example/: data.csv  ori_dif_sequences.csv
example_01/: data.csv
example_02/: data.csv
installation/: index.html
output/: index.html
search/: search_index.json
src/seabreeze/: Snakefile  align_and_visual_timeseries.py  clean_syri.py  find_reindex_bases.py  nucmer_syri_plotsr.py  parallel_rearrangement_stack.py  replichore_arms_analyse.py  seabreeze.py
test/: .gitignore  fast_stats_test.py  find_reindex_bases_test.py  mask_IS_elements_test.py  nucmer_alignment_test.py  plotsr_test.py  reindex_assembl_test.py  rename_contigs_test.py  replichore_arms_analyse_test.py  seabreeze_batch_all_test.py  seabreeze_batch_workflow_test.py  seabreeze_master_test.py  seabreeze_run_all_test.py  seabreeze_run_workflow_test.py  syri_call_variants_test.py
test/data/: file1.filtered.coords  file1.filtered.delta  file1syri.out
test/scripts/: find_reindex_bases_test.py  reindex_assembly_test.py  reindex_assemby_test.py  rename_contigs_test.py
test/seabreeze_batch_test/: ori_dif_sequences.csv
test/seabreeze_test/: data.csv
tutorial/: index.html
usage/: index.html
workflows/: index.html
(+30 files in other folders)
