[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "seabreeze"
version = "1.3.0"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"*" = ["*.smk", "*.yml"]

[project.scripts]
seabreeze = "seabreeze.seabreeze:main"
