[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "seabreeze"
version = "1.3.0"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"seabreeze" = ["Snakefile", "*.smk", "*.yml"]
"seabreeze.plotsr" = ["plotsr-bin"]
[tool.setuptools.package-data]
"seabreeze" = ["Snakefile", "*.smk", "*.yml"]
"seabreeze.plotsr" = ["plotsr-bin"]
"seabreeze.workflow.envs" = ["*.yml", "*.yaml"]

[project.scripts]
seabreeze = "seabreeze.seabreeze:main"
